# OpenFlight

./: .gitattributes  .gitignore  ADAPTER_HARNESS_IMPLEMENTATION.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLI_IMPLEMENTATION_SUMMARY.md  COMMIT_MSG.txt  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  DCS_EXPORT_IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  Makefile  PR_DESCRIPTION.md  README.md  ROADMAP.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SUPPLY_CHAIN_AUDIT.md  SYNTHETIC_HARNESS_IMPLEMENTATION.md  THIRD_PARTY_LICENSES.md  TOOLCHAIN_ALIGNMENT_SUMMARY.md  _update_profiles.py  about.hbs  about.hjson  about.toml  baseline-api.txt  clippy.toml  clippy_output.txt  codecov.yml  dashboard-config.toml  deny.toml  flake.nix  mutants.toml  run_fmt.ps1  rustfmt.nightly.toml  rustfmt.toml  temp_check.rs  test_output.txt
crates/flight-ac7-input/: Cargo.toml  README.md
crates/flight-ac7-input/fuzz/: Cargo.toml
crates/flight-ac7-input/src/: lib.rs
crates/flight-ac7-input/tests/: depth_tests.rs
crates/flight-ac7-protocol/: Cargo.toml  README.md
crates/flight-ac7-protocol/fuzz/: Cargo.toml
crates/flight-ac7-protocol/src/: lib.rs
crates/flight-ac7-protocol/tests/: depth_tests.rs
crates/flight-ac7-telemetry/: Cargo.toml  README.md
crates/flight-ac7-telemetry/src/: lib.rs
crates/flight-ac7-telemetry/tests/: depth_tests.rs
crates/flight-adapter-common/: Cargo.toml  README.md
crates/flight-adapter-common/src/: config.rs  error.rs  lib.rs  metrics.rs  reconnect_backoff.rs  reconnection.rs  state.rs
crates/flight-adapter-common/tests/: depth_tests.rs
crates/flight-aerofly/: Cargo.toml  README.md
crates/flight-axis/: Cargo.toml  README.md
crates/flight-bdd-metrics/: Cargo.toml  README.md
crates/flight-blackbox/: Cargo.toml  README.md
crates/flight-bus/: Cargo.toml  README.md
crates/flight-cli/: Cargo.toml  README.md
crates/flight-cloud-profiles/: Cargo.toml  README.md
crates/flight-core/: Cargo.toml  README.md
crates/flight-dcs-bios/: Cargo.toml  README.md
crates/flight-dcs-export/: Cargo.toml  README.md
crates/flight-dcs-modules/: Cargo.toml  README.md
crates/flight-device-common/: Cargo.toml  README.md
crates/flight-elite/: Cargo.toml  README.md
crates/flight-falcon-bms/: Cargo.toml  README.md
crates/flight-ffb/: Cargo.toml  DIRECTINPUT_IMPLEMENTATION.md  README.md
crates/flight-ffb-brunner/: Cargo.toml  README.md
crates/flight-ffb-moza/: Cargo.toml  README.md
crates/flight-ffb-vpforce/: Cargo.toml  README.md
crates/flight-headless/: Cargo.toml  README.md
crates/flight-hid-support/: Cargo.toml  README.md
crates/flight-hid-types/: Cargo.toml  README.md
examples/: Cargo.toml  README.md  axis_demo.rs  capability_demo.rs  capture_replay_demo.rs  integration_demo.rs  pipeline_compilation_demo.rs  profile_demo.rs  profile_parsing_demo.rs  replay_demo.rs  simconnect_usage_demo.rs  simple_profile_demo.rs  streamdeck_panel_demo.rs  telemetry_synth_demo.rs  watchdog_integration_demo.rs
installer/: Cargo.toml  update-manifest-schema.json
installer/debian/: 99-flight-hub.rules  README.md  build.sh  control  postinst  postrm
installer/linux/: files.toml
installer/src/: lib.rs  manifest.rs  rollback.rs
installer/tests/: Test-InstallPaths.ps1  Test-ServiceStatus.ps1  Test-UninstallClean.ps1  depth_edge_cases.rs  depth_file_layout.rs  depth_service_registration.rs  depth_upgrade_behavior.rs  depth_verification.rs  install_test.rs  installer_depth_test.rs  test_install_paths.sh  test_service_status.sh  test_uninstall_clean.sh
installer/windows/: files.toml
installer/wix/: Components.wxs  License.rtf  Product.wxs  README.md  build.ps1  generate-images.py  generate-images.rs
specs/: Cargo.toml  README.md  spec_ledger.yaml
specs/features/: req_1000_milestone_1000.feature  req_1001_macro_recording.feature  req_1002_conditional_triggers.feature  req_1003_timer_based_actions.feature  req_1004_input_chaining.feature  req_1005_state_based_profiles.feature  req_1006_voice_command_integration.feature  req_1007_gesture_recognition.feature  req_1008_ai_assisted_mapping.feature  req_1009_template_library.feature  req_100_rt_axis_invariants.feature  req_1010_multi_user_profiles.feature  req_1011_remote_device_sharing.feature  req_1012_multiplayer_sync.feature  req_1013_instructor_station.feature  req_1014_replay_sharing.feature  req_1015_cloud_profile_sync.feature  req_1016_community_profiles.feature  req_1017_telemetry_streaming.feature  req_1018_rest_api.feature  req_1019_websocket_events.feature  req_101_session_cascade.feature  req_1020_mqtt_integration.feature  req_1021_ffb_effect_chaining.feature  req_1022_ffb_frequency_response.feature  req_1023_ffb_position_dependent_effects.feature  req_1024_ffb_airspeed_scaling.feature  req_1025_ffb_stall_buffet.feature  req_1026_ffb_gear_buffet.feature  req_1027_ffb_flap_buffet.feature  req_1028_ffb_control_loading.feature  req_1029_ffb_breakout_force.feature  req_102_virtual_device.feature  req_1030_ffb_damping.feature  req_1031_windows_notification_integration.feature  req_1032_system_tray_icon.feature  req_1033_windows_startup_registry.feature  req_1034_taskbar_progress.feature  req_1035_file_association.feature  req_1036_deep_linking.feature  (+1005 more)
specs/tests/: cucumber.rs
xtask/: Cargo.toml  README.md
xtask/examples/: schema_validation_demo.rs
xtask/src/: ac_status.rs  badges.rs  bench_compare.rs  build_deb.rs  changelog.rs  check.rs  clean_worktrees.rs  compat.rs  compat_matrix.rs  config.rs  coverage.rs  cross_ref.rs  debian_package.rs  device_report.rs  fix_front_matter.rs  front_matter.rs  fuzz_smoke.rs  generate_compat.rs  gherkin.rs  hotas.rs  license_inventory.rs  lint_policy.rs  main.rs  normalize_docs.rs  package.rs  quality_gates.rs  release.rs  review_telemetry.rs  ripr.rs  ripr_pr.rs  schema.rs  validate.rs  validate_infra.rs  wix_images.rs
xtask/tests/: compat_test.rs  compat_validation_depth_test.rs  cross_ref_integration_test.rs  gherkin_test.rs  license_inventory_test.proptest-regressions  license_inventory_test.rs  schema_validation_test.rs
(+4478 files in other folders)
