[workspace]
resolver = "2"
members = [
    "crates/flight-core",
    "crates/flight-ipc", 
    "crates/flight-axis",
    "crates/flight-scheduler",
    "crates/flight-virtual",
    "crates/flight-ffb",
    "crates/flight-hid",
    "crates/flight-bus",
    "crates/flight-simconnect-sys",
    "crates/flight-simconnect",
    "crates/flight-xplane",
    "crates/flight-dcs-export",
    "crates/flight-panels",
    "crates/flight-streamdeck",
    "crates/flight-tactile",
    "crates/flight-writers",
    "crates/flight-replay",
    "crates/flight-tracing",
    "crates/flight-service",
    "crates/flight-cli",
    "crates/flight-ui",
    "crates/flight-updater",
    "examples"
]



[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
authors = ["Flight Hub Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/flight-hub/flight-hub"
homepage = "https://flight-hub.dev"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "time", "fs", "signal", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }

# IPC and serialization - gRPC stack unified to 0.14.x
prost = "0.14.1"
# tonic configured with built-in transport features based on usage in flight-ipc
# Uses tonic::transport::Server and tonic::transport::Channel for IPC communication
# Features: transport (includes client/server), codegen (for proto compilation)
tonic = { version = "0.14.2", features = ["transport", "codegen"] }
tonic-build = "0.14.2"
prost-build = "0.14.1"
prost-types = "0.14.1"
protobuf-codegen = "4.32.1-release"

# HTTP client
reqwest = { version = "0.12.8", default-features = false, features = ["rustls-tls", "http2", "json"] }

# Real-time and performance
crossbeam = "0.8"
parking_lot = "0.12"
once_cell = "1.19"

# Platform-specific dependencies (defined in individual crates)
windows = { version = "0.62", features = [
    "Win32_System_Threading",
    "Win32_System_Performance", 
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Storage_FileSystem"
] }
libc = "0.2"
nix = "0.30"

# Additional dependencies
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"
clap = { version = "4.4", default-features = false, features = ["std", "derive"] }

# Async and futures ecosystem - aligned versions
futures = "0.3"
futures-core = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"

cc = "1.0"




[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"

# Real-time optimized profile
[profile.rt]
inherits = "release"
debug = true
overflow-checks = false