[workspace]
resolver = "2"
members = [
    "crates/flight-adapter-common",
    "crates/flight-core",
    "crates/flight-ipc",
    "crates/flight-axis",
    "crates/flight-device-common",
    "crates/flight-bdd-metrics",
    "crates/flight-workspace-meta",
    "crates/flight-test-helpers",
    "crates/flight-scheduler",
    "crates/flight-virtual",
    "crates/flight-ffb",
    "crates/flight-hid",
    "crates/flight-hid-support",
    "crates/flight-hid-types",
    "crates/flight-headless",
    "crates/flight-metrics",
    "crates/flight-metrics-http",
    "crates/flight-bus",
    "crates/flight-simconnect-sys",
    "crates/flight-simconnect",
    "crates/flight-xplane",
    "crates/flight-xplane-plugin",
    "crates/flight-dcs-export",
    "crates/flight-dcs-modules",
    "crates/flight-aerofly",
    "crates/flight-prepar3d",
    "crates/flight-psx",
    "crates/flight-falcon-bms",
    "crates/flight-il2",
    "crates/flight-sim-racing",
    "crates/flight-opentrack",
    "crates/flight-openxr",
    "crates/flight-ac7-protocol",
    "crates/flight-ac7-telemetry",
    "crates/flight-ac7-input",
    "crates/flight-warthunder",
    "crates/flight-wingman",
    "crates/flight-elite",
    "crates/flight-ksp",
    "crates/flight-panels",
    "crates/flight-panels-core",
    "crates/flight-panels-saitek",
    "crates/flight-hotas-saitek",
    "crates/flight-hotas-ch",
    "crates/flight-hotas-vkb",
    "crates/flight-hotas-thrustmaster",
    "crates/flight-panels-cougar",
    "crates/flight-streamdeck",
    "crates/flight-tactile",
    "crates/flight-writers",
    "crates/flight-replay",
    "crates/flight-tracing",
    "crates/flight-service",
    "crates/flight-cli",
    "crates/flight-ui",
    "crates/flight-updater",
    "crates/flight-units",
    "crates/flight-rules",
    "crates/flight-profile",
    "crates/flight-process-detection",
    "crates/flight-security",
    "crates/flight-blackbox",
    "crates/flight-watchdog",
    "crates/flight-session",
    "crates/flight-motion",
    "crates/flight-cloud-profiles",
    "crates/flight-vr",
    "crates/flight-vr-overlay",
    "crates/flight-ffb-vpforce",
    "crates/flight-hotas-winwing",
    "crates/flight-hotas-honeycomb",
    "crates/flight-hotas-logitech",
    "crates/flight-hotas-logitech-wheel",
    "crates/flight-hotas-virpil",
    "crates/flight-hotas-brunner",
    "crates/flight-hotas-vpforce",
    "crates/flight-hotas-microsoft",
    "crates/flight-hotas-sony",
    "crates/flight-integration-tests",
    "crates/flight-ffb-moza",
    "crates/flight-trackir",
    "crates/flight-hotas-simucube",
    "crates/flight-hotas-turtlebeach",
    "crates/flight-panels-goflight",
    "crates/flight-macos-hid",
    "crates/flight-open-hardware",
    "crates/flight-plugin",
    "crates/flight-dcs-bios",
    "examples",
    "installer",
    "xtask",
    "specs",
]


[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
authors = ["Flight Hub Team"]
license = "MIT OR Apache-2.0"
repository = "git@github.com:EffortlessMetrics/OpenFlight.git"
homepage = "https://flight-hub.dev"
categories = ["simulation", "api-bindings"]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.49.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "fs",
    "signal",
    "sync",
] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8.23"
serde_json = "1.0.149"
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
anyhow = "1.0.100"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
    "fmt",
    "env-filter",
] }

# IPC and serialization - gRPC stack unified to 0.14.x
prost = "0.14.3"
# tonic configured with built-in transport features based on usage in flight-ipc
# Uses tonic::transport::Server and tonic::transport::Channel for IPC communication
# Features: transport (includes client/server), codegen (for proto compilation)
tonic = { version = "0.14.3", features = ["transport", "codegen"] }
tonic-prost = "0.14.3"
tonic-build = "0.14.3"
tonic-prost-build = "0.14.3"
prost-build = "0.14.3"
prost-types = "0.14.3"
protobuf-codegen = "4.33.5-release"

# Internal microcrate utilities
flight-adapter-common = { path = "crates/flight-adapter-common" }
flight-bdd-metrics = { path = "crates/flight-bdd-metrics" }
flight-device-common = { path = "crates/flight-device-common" }
flight-metrics = { path = "crates/flight-metrics" }
flight-axis = { path = "crates/flight-axis" }
flight-test-helpers = { path = "crates/flight-test-helpers" }
flight-workspace-meta = { path = "crates/flight-workspace-meta" }
flight-ac7-protocol = { path = "crates/flight-ac7-protocol" }
flight-ac7-telemetry = { path = "crates/flight-ac7-telemetry" }
flight-ac7-input = { path = "crates/flight-ac7-input" }
flight-warthunder = { path = "crates/flight-warthunder" }
flight-elite = { path = "crates/flight-elite" }
flight-ksp = { path = "crates/flight-ksp" }

# HTTP client
reqwest = { version = "0.13.1", default-features = false, features = [
    "rustls",
    "rustls-native-certs",
    "http2",
    "json",
] }
# YAML parsing
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }

# Real-time and performance
crossbeam = "0.8.4"
parking_lot = "0.12.5"
once_cell = "1.21.3"

# Platform-specific dependencies (features are selected in individual crates)
windows = "0.62.2"
libc = "0.2.180"
nix = "0.31.1"

# macOS IOKit / Core Foundation bindings
core-foundation = "0.10"
core-foundation-sys = "0.8"
io-kit-sys = "0.4"

# Additional dependencies
criterion = "0.8.1"
proptest = "1.9.0"
insta = { version = "1.42.2", features = ["json", "yaml"] }
tempfile = "3.24.0"
clap = { version = "4.5.56", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
    "error-context",
] }

# Async and futures ecosystem - aligned versions
futures = "0.3.31"
futures-core = "0.3.31"
tokio-stream = "0.1.18"
tokio-util = "0.7.18"

cc = "1.2.55"

# Testing and benchmarking utilities
tokio-test = "0.4.5"
chrono = { version = "0.4.43", features = ["serde"] }

# Additional common dependencies
sha2 = "0.10.9"
walkdir = "2.5.0"
regex = "1.12.2"
rand = "0.9.2"
dirs = "6.0.0"
flate2 = "1.1.8"
tar = "0.4.44"
hex = "0.4.3"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
semver = "1.0.27"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
fastrand = "2.3.0"
axum = "0.8.8"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
hyper = "1.8.1"
axum-test = "18.7.0"
filetime = "0.2.27"
x11rb = "0.13"
hidapi = { version = "2.6.3", default-features = false, features = ["linux-static-hidraw", "windows-native"] }
approx = "0.5"
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }


[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"

# Real-time optimized profile
[profile.rt]
inherits = "release"
debug = true
overflow-checks = false
