[package]
name = "flight-hub-examples"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

# SPDX License Identifier
# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: Copyright (c) 2024 Flight Hub Team

[[bin]]
name = "profile_demo"
path = "profile_demo.rs"

[[bin]]
name = "capability_demo"
path = "capability_demo.rs"

[[bin]]
name = "watchdog_integration_demo"
path = "watchdog_integration_demo.rs"

[[bin]]
name = "telemetry_synth_demo"
path = "telemetry_synth_demo.rs"

[[bin]]
name = "profile_parsing_demo"
path = "profile_parsing_demo.rs"

[[bin]]
name = "pipeline_compilation_demo"
path = "pipeline_compilation_demo.rs"

[[bin]]
name = "simconnect_usage_demo"
path = "simconnect_usage_demo.rs"

[[bin]]
name = "streamdeck_panel_demo"
path = "streamdeck_panel_demo.rs"

[[bin]]
name = "capture_replay_demo"
path = "capture_replay_demo.rs"

[[bin]]
name = "simple_profile_demo"
path = "simple_profile_demo.rs"

[[bin]]
name = "axis_demo"
path = "axis_demo.rs"

[[bin]]
name = "replay_demo"
path = "replay_demo.rs"

[[bin]]
name = "integration_demo"
path = "integration_demo.rs"

[features]
default = []
axis = ["flight-axis", "tokio", "tracing"]
replay = ["flight-replay", "tokio", "tracing"]
simconnect = ["flight-simconnect", "tokio", "tracing"]
panels = ["flight-panels", "tokio", "tracing"]
streamdeck = ["flight-streamdeck", "tokio", "tracing"]
integration = ["axis", "replay", "simconnect", "panels", "streamdeck"]

[dependencies]
# Core always available
flight-core = { path = "../crates/flight-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Feature-gated dependencies
flight-axis = { path = "../crates/flight-axis", optional = true }
flight-replay = { path = "../crates/flight-replay", optional = true }
flight-simconnect = { path = "../crates/flight-simconnect", optional = true }
flight-panels = { path = "../crates/flight-panels", optional = true }
flight-streamdeck = { path = "../crates/flight-streamdeck", optional = true }
flight-service = { path = "../crates/flight-service", optional = true }
flight-hid = { path = "../crates/flight-hid", optional = true }
flight-ffb = { path = "../crates/flight-ffb", optional = true }
flight-bus = { path = "../crates/flight-bus", optional = true }
flight-ipc = { path = "../crates/flight-ipc", optional = true }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "time", "fs", "signal", "sync"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
tempfile = { version = "3.8", optional = true }

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { workspace = true, optional = true }