[package]
name = "flight-hub-examples"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Feature-gated OpenFlight example binaries and integration demos."
readme = "README.md"
keywords = ["flight-sim", "openflight", "examples", "demos"]
publish = false

# SPDX License Identifier
# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: Copyright (c) 2024 Flight Hub Team

# Examples are feature-gated to avoid pulling in heavyweight dependencies by default.
# To build a specific example:
#   cargo run -p flight-hub-examples --example <name> --features <feature>
# 
# Available features:
#   simconnect        - SimConnect integration examples
#   streamdeck,panels - StreamDeck panel examples
#   flight-hid        - HID device examples
#   integration       - Multi-crate integration examples (may need API porting)
#   replay            - Replay system examples (may need API porting)

[[bin]]
name = "profile_demo"
path = "profile_demo.rs"

[[bin]]
name = "capability_demo"
path = "capability_demo.rs"

[[bin]]
name = "watchdog_integration_demo"
path = "watchdog_integration_demo.rs"

[[bin]]
name = "telemetry_synth_demo"
path = "telemetry_synth_demo.rs"

[[bin]]
name = "profile_parsing_demo"
path = "profile_parsing_demo.rs"

[[bin]]
name = "pipeline_compilation_demo"
path = "pipeline_compilation_demo.rs"

[[bin]]
name = "simconnect_usage_demo"
path = "simconnect_usage_demo.rs"

[[bin]]
name = "streamdeck_panel_demo"
path = "streamdeck_panel_demo.rs"

[[bin]]
name = "capture_replay_demo"
path = "capture_replay_demo.rs"

[[bin]]
name = "simple_profile_demo"
path = "simple_profile_demo.rs"

[[bin]]
name = "axis_demo"
path = "axis_demo.rs"

[[bin]]
name = "replay_demo"
path = "replay_demo.rs"

[[bin]]
name = "integration_demo"
path = "integration_demo.rs"

[features]
default = []
flight-service    = ["dep:flight-service"]
flight-simconnect = ["dep:flight-simconnect"]
flight-panels     = ["dep:flight-panels"]
flight-streamdeck = ["dep:flight-streamdeck"]
flight-hid        = ["dep:flight-hid"]
panels            = ["flight-panels"]
simconnect        = ["flight-simconnect"]
streamdeck        = ["flight-streamdeck"]
windows           = ["dep:windows"]
integration       = []
axis              = []  # legacy gate for axis_demo.rs
replay            = ["dep:flight-replay", "dep:tempfile"]  # legacy gate for replay_demo.rs

[dependencies]
# Core always available
anyhow = "1.0.100"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
postcard = { workspace = true }
flight-core = { path = "../crates/flight-core" }
flight-bus = { path = "../crates/flight-bus" }
flight-ffb = { path = "../crates/flight-ffb" }
flight-axis = { path = "../crates/flight-axis" }

# Optional feature-gated dependencies
flight-replay     = { path = "../crates/flight-replay", optional = true }
flight-service    = { path = "../crates/flight-service", optional = true }
flight-simconnect = { path = "../crates/flight-simconnect", optional = true }
flight-streamdeck = { path = "../crates/flight-streamdeck", optional = true }
flight-panels     = { path = "../crates/flight-panels", optional = true }
flight-hid        = { path = "../crates/flight-hid", optional = true }
tempfile          = { version = "3.24.0", optional = true }

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { workspace = true, optional = true }
