[package]
name = "specs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "BDD specification tests for OpenFlight requirements."
readme = "README.md"
keywords = ["flight-sim", "openflight", "bdd", "testing"]

[dependencies]
cucumber = "0.22.1"
tokio = { workspace = true }
anyhow = { workspace = true }

# Dependencies for axis processing tests
flight-core = { path = "../crates/flight-core" }
flight-axis = { path = "../crates/flight-axis" }
flight-scheduler = { path = "../crates/flight-scheduler" }
flight-bus = { path = "../crates/flight-bus" }

# Dependencies for documentation validation tests
serde = { workspace = true }
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
walkdir = "2.5.0"
regex = "1.12.2"

[[test]]
name = "cucumber"
harness = false
