[package]
name = "specs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "BDD specification tests for OpenFlight requirements."
readme = "README.md"
keywords = ["flight-sim", "openflight", "bdd", "testing"]

[dependencies]
cucumber = "0.22.1"
tokio = { workspace = true }
anyhow = { workspace = true }

# Dependencies for axis processing tests
flight-core = { path = "../crates/flight-core" }
flight-bdd-metrics = { workspace = true }
flight-workspace-meta = { workspace = true }
flight-axis = { path = "../crates/flight-axis" }
flight-scheduler = { path = "../crates/flight-scheduler" }
flight-bus = { path = "../crates/flight-bus" }

# Dependencies for HOTAS 4 BDD tests
flight-hotas-thrustmaster = { path = "../crates/flight-hotas-thrustmaster" }
flight-hid-support = { path = "../crates/flight-hid-support" }

# Dependencies for documentation validation tests
serde = { workspace = true }
serde_yaml = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }

[[test]]
name = "cucumber"
harness = false
