[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
serde_json = "1.0.149"
jsonschema = "0.40.2"
walkdir = "2.5.0"
regex = "1.12.2"
anyhow = "1.0.100"
chrono = "0.4.43"

[features]
hidapi = ["dep:hidapi"]

[dependencies.hidapi]
version = "2.6.4"
optional = true

[dev-dependencies]
tempfile = "3.24.0"
proptest = "1.9.0"
cargo-lock = "11.0.1"
