[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
description = "Workspace automation and validation tasks for OpenFlight."
readme = "README.md"
keywords = ["flight-sim", "openflight", "xtask", "tooling"]
publish = false

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
jsonschema = "0.40.2"
walkdir = { workspace = true }
regex = { workspace = true }
anyhow = "1.0.100"
chrono = "0.4.43"
flight-bdd-metrics = { workspace = true }
flight-workspace-meta = { workspace = true }

[features]
hidapi = ["dep:hidapi"]

[dependencies.hidapi]
version = "2.6.4"
optional = true

[dev-dependencies]
tempfile = "3.24.0"
proptest = "1.9.0"
cargo-lock = "11.0.1"
