[package]
homepage.workspace = true
name = "flight-adapter-common"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared adapter primitives for simulator integrations in OpenFlight."
readme = "README.md"
categories.workspace = true
keywords = ["flight-sim", "openflight", "adapter", "telemetry"]
[dependencies]
thiserror.workspace = true
