[package]
name = "flight-axis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# SPDX License Identifier
# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: Copyright (c) 2024 Flight Hub Team

[dependencies]
flight-core = { path = "../flight-core" }
tracing.workspace = true
once_cell.workspace = true
crossbeam.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
bincode = "1.3"

[features]
default = []
rt-checks = []  # Enable runtime allocation/lock checking

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "axis_performance"
harness = false

[[bench]]
name = "detent_performance"
harness = false

