[package]
name = "flight-axis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# SPDX License Identifier
# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: Copyright (c) 2024 Flight Hub Team

[dependencies]
flight-core = { path = "../flight-core" }
tracing.workspace = true
once_cell.workspace = true
crossbeam.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }

[features]
default = []
rt-checks = []  # Enable runtime allocation/lock checking
serde = ["dep:serde"]
tests-optin = []
benches-optin = []
examples-optin = []

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "axis_performance"
harness = false
required-features = ["benches-optin"]

[[bench]]
name = "detent_performance"
harness = false
required-features = ["benches-optin"]

[[test]]
name = "detent_integration"
required-features = ["tests-optin"]

[[test]]
name = "detent_tests"
required-features = ["tests-optin"]

[[test]]
name = "integration_tests"
required-features = ["tests-optin"]

[[test]]
name = "mixer_tests"
required-features = ["tests-optin"]

[[test]]
name = "performance_validation"
required-features = ["tests-optin"]

[[example]]
name = "basic_usage"
required-features = ["examples-optin"]

[[example]]
name = "mixer_demo"
required-features = ["examples-optin"]
