[package]
name = "flight-blackbox"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Flight Black Box (.fbb) recording and replay data format support."
readme = "README.md"
keywords = ["flight-sim", "openflight", "recording", "telemetry"]
[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
postcard.workspace = true
sha2.workspace = true
tokio.workspace = true
anyhow.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
