[package]
name = "flight-bus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
flight-core = { path = "../flight-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
proptest = { workspace = true }